[package]
name = "shadowrs"
version = "0.1.0"
authors = ["Raymond Yeh <extraymond@gmail.com>"]
edition = "2018"
description = "Rust port of the motion shadow SDK."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.4.0"
femme = "1.3.0"
log = "0.4.8"
futures = "0.3.1"
quick-xml = { verions = "0.17.2", features = ["serialize"]}
serde = { version = "1.0.104", features = ["derive"]}
anyhow = "1.0.26"
thiserror = "1.0.9"
